fix layout on mobile, add favicon.ico

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,12 +27,12 @@ h1 {
 
 #quote-box {
   border: 1px solid rgb(228, 211, 211);
-  min-width: 500px;
   max-width: 500px;
   max-height: 500px;
   display: flex;
   flex-direction: column;
   padding: 3em;
+  margin: 5px;
   border-radius: 10px;
   font-family: monospace;
   font-size: 17px;
